--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Keepit</string>
+    <string name="keepit">keepit</string>
+    <string name="search_notes">Search Notes</string>
+    <string name="type_note_here">Type note here</string>
+    <string name="Type_note_here" />
 </resources>
